unpackaged/main/default/objects/Case/fields/Description_of_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Arrangement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of Arrangement</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>