unpackaged/main/default/objects/Case/fields/Description_rich__c.field-meta.xml
<CustomField>
    <fullName>Description_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>