unpackaged/main/default/objects/Case/fields/Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>Destination_Airport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>