unpackaged/main/default/objects/Case/fields/Destination_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Destination_Arrival_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination Arrival Date</label>
    <type>Date</type>
</CustomField>