unpackaged/main/default/objects/Case/fields/Destination_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Destination_Arrival_Time__c</fullName>
    <label>Destination Arrival Time</label>
    <type>Time</type>
</CustomField>