unpackaged/main/default/objects/Case/fields/Destination_City2__c.field-meta.xml
<CustomField>
    <fullName>Destination_City2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>