unpackaged/main/default/objects/Case/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Arrival City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>