unpackaged/main/default/objects/Case/fields/Destination_Location_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location_and_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination_Location_and_Address</label>
    <type>TextArea</type>
</CustomField>