unpackaged/main/default/objects/Case/fields/Destination_Phone__c.field-meta.xml
<CustomField>
    <fullName>Destination_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination Phone</label>
    <type>Phone</type>
</CustomField>