unpackaged/main/default/objects/Case/fields/Destination_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Destination_Terminal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination Terminal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>