unpackaged/main/default/objects/Case/fields/Details_and_weight_of_luggage__c.field-meta.xml
<CustomField>
    <fullName>Details_and_weight_of_luggage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Details and weight of luggage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>