unpackaged/main/default/objects/Case/fields/Do_Not_Charge__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Charge Yet</label>
    <type>Checkbox</type>
</CustomField>