unpackaged/main/default/objects/Case/fields/Dress_Code__c.field-meta.xml
<CustomField>
    <fullName>Dress_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dress Code</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>