unpackaged/main/default/objects/Case/fields/Drop_Off_Address__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Address__c</fullName>
    <formula>Drop_Off_Location__r.BillingStreet &amp; ", " &amp; Drop_Off_Location__r.BillingCity &amp; ", " &amp; Drop_Off_Location__r.BillingState &amp; ", " &amp; Drop_Off_Location__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drop Off Address</label>
    <type>Text</type>
</CustomField>