unpackaged/main/default/objects/Case/fields/Drop_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drop Off Date</label>
    <type>Date</type>
</CustomField>