unpackaged/main/default/objects/Case/fields/Drop_Off_Day__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Day__c</fullName>
    <formula>CASE( 
MOD( Drop_off_Date__c - DATE( 1900, 1, 7 ), 7 ), 
0, "Sunday", 
1, "Monday", 
2, "Tuesday", 
3, "Wednesday", 
4, "Thursday", 
5, "Friday", 
"Saturday" 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drop Off Day</label>
    <type>Text</type>
</CustomField>