unpackaged/main/default/objects/Case/fields/Drop_Off_Location__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drop Off Location (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logbooks (Drop Off Location)</relationshipLabel>
    <relationshipName>DropOffLocationLogbooks</relationshipName>
    <type>Lookup</type>
</CustomField>