unpackaged/main/default/objects/Case/fields/Drop_off_Time__c.field-meta.xml
<CustomField>
    <fullName>Drop_off_Time__c</fullName>
    <label>Drop off Time</label>
    <type>Time</type>
</CustomField>