unpackaged/main/default/objects/Case/fields/Dynamic_Subject__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Subject__c</fullName>
    <formula>Record_Type_Name__c +IF( ISBLANK(Vendor__r.Name), '', ' | '+ Vendor__r.Name )+ IF(of_Nights__c &gt; 0, ' | '+   TEXT(of_Nights__c ) + ' Nights', '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic Subject</label>
    <type>Text</type>
</CustomField>