unpackaged/main/default/objects/Case/fields/Employee_Comm_Amt_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Employee_Comm_Amt_To_Be_Paid__c</fullName>
    <label>Employee Comm Amt To Be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>