unpackaged/main/default/objects/Case/fields/Employee_Commission_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Employee_Commission_Payment_Method__c</fullName>
    <label>Employee Commission Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>