unpackaged/main/default/objects/Case/fields/Employee_Due_Commission__c.field-meta.xml
<CustomField>
    <fullName>Employee_Due_Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Due Commission</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>