unpackaged/main/default/objects/Case/fields/Employee_Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Employee_Foreign_Currency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Foreign Currency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>