unpackaged/main/default/objects/Case/fields/Employee_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Paid_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Paid Date</label>
    <type>Date</type>
</CustomField>