unpackaged/main/default/objects/Case/fields/Enter_Time__c.field-meta.xml
<CustomField>
    <fullName>Enter_Time__c</fullName>
    <label>Enter Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>