unpackaged/main/default/objects/Case/fields/Estimated_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Price__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>