unpackaged/main/default/objects/Case/fields/Estimated_Time_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_of_Delivery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Time of Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>