unpackaged/main/default/objects/Case/fields/Event_Venue_Address__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Venue Address</label>
    <type>TextArea</type>
</CustomField>