unpackaged/main/default/objects/Case/fields/Expected_Commission__c.field-meta.xml
<CustomField>
    <fullName>Expected_Commission__c</fullName>
    <label>Expected Commission Percent/Markup</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>