unpackaged/main/default/objects/Case/fields/Expected_Date_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Receipt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Date of Receipt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>