unpackaged/main/default/objects/Case/fields/Flight_Information__c.field-meta.xml
<CustomField>
    <fullName>Flight_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>