unpackaged/main/default/objects/Case/fields/Flight_information_rich__c.field-meta.xml
<CustomField>
    <fullName>Flight_information_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight information</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>