unpackaged/main/default/objects/Case/fields/Flow_Booking_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flow_Booking_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow - Booking Date Time</label>
    <type>DateTime</type>
</CustomField>