unpackaged/main/default/objects/Case/fields/Flow_Check_Out_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flow_Check_Out_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow - Check Out Date/Time</label>
    <type>DateTime</type>
</CustomField>