unpackaged/main/default/objects/Case/fields/Flow_Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flow_Departure_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow - Departure Date/Time</label>
    <type>DateTime</type>
</CustomField>