unpackaged/main/default/objects/Case/fields/Flow_Destination_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flow_Destination_Arrival_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow - Destination Arrival Date/Time</label>
    <type>DateTime</type>
</CustomField>