unpackaged/main/default/objects/Case/fields/Flow_Drop_Off_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flow_Drop_Off_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow - Drop/Off Date Time</label>
    <type>DateTime</type>
</CustomField>