unpackaged/main/default/objects/Case/fields/Flow_Formula_1__c.field-meta.xml
<CustomField>
    <fullName>Flow_Formula_1__c</fullName>
    <formula>TEXT(HOUR( TIMEVALUE(Flow_Check_In_Date_Time__c )))  &amp;  BR() &amp;
TEXT(HOUR( TIMEVALUE(Flow_Check_Out_Date_Time__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow - Formula 1</label>
    <type>Text</type>
</CustomField>