unpackaged/main/default/objects/Case/fields/Flow_Pick_Up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Flow_Pick_Up_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow - Pick Up Date/Time</label>
    <type>DateTime</type>
</CustomField>