unpackaged/main/default/objects/Case/fields/Foreign_Amt_Emp_Comm_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Amt_Emp_Comm_Be_Paid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Foreign Currency Amount (Insider Employee Commission To Be Paid</inlineHelpText>
    <label>Foreign Amt (Employee Comm Be Paid)</label>
    <type>TextArea</type>
</CustomField>