unpackaged/main/default/objects/Case/fields/Foreign_Currency_Amount_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency_Amount_Commissions__c</fullName>
    <label>Foreign Currency Amount (Commissions)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>