unpackaged/main/default/objects/Case/fields/Formula_field_for_Time_Warp__c.field-meta.xml
<CustomField>
    <fullName>Formula_field_for_Time_Warp__c</fullName>
    <formula>IF(
  RecordType.Name = "Train Booking", 
  Date_of_Departure__c,
  IF(
    RecordType.Name = "Car Rental",
    Pickup_Date__c,
    IF(
    RecordType.Name = "Hotel Booking",
    Check_In_Date__c,
    IF(
    RecordType.Name = "Car Service",
    Pickup_Date__c,
    Date__c 
  )
  )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula field for Time Warp</label>
    <type>Date</type>
</CustomField>