unpackaged/main/default/objects/Case/fields/Getting_Delivered_to_Insider__c.field-meta.xml
<CustomField>
    <fullName>Getting_Delivered_to_Insider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Getting Delivered to Insider</label>
    <type>Checkbox</type>
</CustomField>