unpackaged/main/default/objects/Case/fields/Give_Check_To_Insider_Employee__c.field-meta.xml
<CustomField>
    <fullName>Give_Check_To_Insider_Employee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Give Check To (Insider Employee)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>