unpackaged/main/default/objects/Case/fields/Ground_Transportation_Details__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transportation_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ground Transportation Details</label>
    <type>TextArea</type>
</CustomField>