unpackaged/main/default/objects/Case/fields/Guest_Cell__c.field-meta.xml
<CustomField>
    <fullName>Guest_Cell__c</fullName>
    <formula>IF(LEN(Person_Using__r.MobilePhone) = 10,
"(" &amp; LEFT(Person_Using__r.MobilePhone, 3) &amp; ") " &amp; RIGHT(LEFT(Person_Using__r.MobilePhone, 6), 3) &amp; "-" &amp; RIGHT(Person_Using__r.MobilePhone, 4), Person_Using__r.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Cell</label>
    <type>Text</type>
</CustomField>