unpackaged/main/default/objects/Case/fields/Guest_Information_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Guest_Information_Special_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guest Information/Special Instructions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>