unpackaged/main/default/objects/Case/fields/Guest_Information_Special_rich__c.field-meta.xml
<CustomField>
    <fullName>Guest_Information_Special_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guest Information/Special Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>