unpackaged/main/default/objects/Case/fields/Hierarchical_Time_Logged__c.field-meta.xml
<CustomField>
    <fullName>Hierarchical_Time_Logged__c</fullName>
    <label>Hierarchical Time Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>