unpackaged/main/default/objects/Case/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <label>Holiday_DNU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>December Festive</fullName>
            </value>
            <value>
                <fullName>Superbowl</fullName>
            </value>
            <value>
                <fullName>Memorial Day</fullName>
            </value>
            <value>
                <fullName>July 4th</fullName>
            </value>
            <value>
                <fullName>Labor Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>