unpackaged/main/default/objects/Case/fields/Hotel_Check_In_Details__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Check_In_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Check In Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>