unpackaged/main/default/objects/Case/fields/Hotel_Time__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Time__c</fullName>
    <formula>IF(ISNULL(Internal_ETA__c) , Check_In_Time__c , Internal_ETA__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Time</label>
    <type>Time</type>
</CustomField>