unpackaged/main/default/objects/Case/fields/House_Account__c.field-meta.xml
<CustomField>
    <fullName>House_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logbooks (House Account)</relationshipLabel>
    <relationshipName>Logbooks_House_Account</relationshipName>
    <type>Lookup</type>
</CustomField>