unpackaged/main/default/objects/Case/fields/House_Contact__c.field-meta.xml
<CustomField>
    <fullName>House_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logbooks (House Contact)</relationshipLabel>
    <relationshipName>Logbooks_House_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>