unpackaged/main/default/objects/Case/fields/House_Conversion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>House_Conversion_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>House Conversion Date/Time</label>
    <type>DateTime</type>
</CustomField>