unpackaged/main/default/objects/Case/fields/House_or_Villa_Name__c.field-meta.xml
<CustomField>
    <fullName>House_or_Villa_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House or Villa Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>House or Villa Logbooks</relationshipLabel>
    <relationshipName>HVLogbooks</relationshipName>
    <type>Lookup</type>
</CustomField>