unpackaged/main/default/objects/Case/fields/House_or_villa_name_rich__c.field-meta.xml
<CustomField>
    <fullName>House_or_villa_name_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>House or villa name</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>