unpackaged/main/default/objects/Case/fields/House_Outcome__c.field-meta.xml
<CustomField>
    <fullName>House_Outcome__c</fullName>
    <label>House Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Couldn't get by calling</fullName>
            </value>
            <value>
                <fullName>Closed for buyout</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>