unpackaged/main/default/objects/Case/fields/House_Status__c.field-meta.xml
<CustomField>
    <fullName>House_Status__c</fullName>
    <label>House Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>