unpackaged/main/default/objects/Case/fields/House_Task__c.field-meta.xml
<CustomField>
    <fullName>House_Task__c</fullName>
    <label>House Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drafting Houses to Call For</fullName>
            </value>
            <value>
                <fullName>Building out / Data input into Spreadsheet</fullName>
            </value>
            <value>
                <fullName>Making House Phones</fullName>
            </value>
            <value>
                <fullName>Holiday / Seasonal / Specia Events Preparation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>