unpackaged/main/default/objects/Case/fields/House_Task_Other__c.field-meta.xml
<CustomField>
    <fullName>House_Task_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>House Task Other</label>
    <type>TextArea</type>
</CustomField>