unpackaged/main/default/objects/Case/fields/Insider_Amenities_Include__c.field-meta.xml
<CustomField>
    <fullName>Insider_Amenities_Include__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insider Amenities Include</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>