unpackaged/main/default/objects/Case/fields/Insider_amenities_include_rich__c.field-meta.xml
<CustomField>
    <fullName>Insider_amenities_include_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insider amenities include</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>