unpackaged/main/default/objects/Case/fields/Insider_Comments__c.field-meta.xml
<CustomField>
    <fullName>Insider_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insider Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>