unpackaged/main/default/objects/Case/fields/Insider_Commission__c.field-meta.xml
<CustomField>
    <fullName>Insider_Commission__c</fullName>
    <label>Vendor Commission / Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>