unpackaged/main/default/objects/Case/fields/Insider_Commission_Markup_Due_This_Mnt__c.field-meta.xml
<CustomField>
    <fullName>Insider_Commission_Markup_Due_This_Mnt__c</fullName>
    <formula>IF(YEAR(Date_Commission_Due__c) = YEAR(TODAY()) &amp;&amp; MONTH(Date_Commission_Due__c) = MONTH(TODAY()), 

Insider_Commission__c , 

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insider Commission / Markup	Due This Mnt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>