unpackaged/main/default/objects/Case/fields/Insider_Gift_Wrapping__c.field-meta.xml
<CustomField>
    <fullName>Insider_Gift_Wrapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insider Gift Wrapping</label>
    <type>Checkbox</type>
</CustomField>