unpackaged/main/default/objects/Case/fields/Instructions_rich__c.field-meta.xml
<CustomField>
    <fullName>Instructions_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instructions</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>