unpackaged/main/default/objects/Case/fields/Internal_ETA__c.field-meta.xml
<CustomField>
    <fullName>Internal_ETA__c</fullName>
    <label>Internal ETA</label>
    <type>Time</type>
</CustomField>