unpackaged/main/default/objects/Case/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Description</label>
    <type>TextArea</type>
</CustomField>