unpackaged/main/default/objects/Case/fields/Invoice_or_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_or_Confirmation_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice or Confirmation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>