unpackaged/main/default/objects/Case/fields/Items_Being_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Items_Being_Delivered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Items Being Delivered</label>
    <type>TextArea</type>
</CustomField>