unpackaged/main/default/objects/Case/fields/Items_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Items_Ordered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Items Ordered/Type of Arrangement</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>