unpackaged/main/default/objects/Case/fields/Items_Ordered_Type_of_Arrangements_rich__c.field-meta.xml
<CustomField>
    <fullName>Items_Ordered_Type_of_Arrangements_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Items Ordered/Type of Arrangements</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>