unpackaged/main/default/objects/Case/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary</label>
    <referenceTo>Itinerary__c</referenceTo>
    <relationshipLabel>Logbooks</relationshipLabel>
    <relationshipName>Logbooks</relationshipName>
    <type>Lookup</type>
</CustomField>