unpackaged/main/default/objects/Case/fields/Itinerary_footer__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_footer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Itinerary footer</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>