unpackaged/main/default/objects/Case/fields/Itinerary_Header__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Header__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Itinerary Header</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>