unpackaged/main/default/objects/Case/fields/Itinerary_Image__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Image__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Itinerary Image</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>