unpackaged/main/default/objects/Case/fields/Itinerary_Middle__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Middle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Itinerary Middle</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>