unpackaged/main/default/objects/Case/fields/Itinerary_Stops__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Stops__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Itinerary / Stops</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>