unpackaged/main/default/objects/Case/fields/Location_Note_rich__c.field-meta.xml
<CustomField>
    <fullName>Location_Note_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Note</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>