unpackaged/main/default/objects/Case/fields/Logbook_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Logbook_Bucket__c</fullName>
    <formula>CASE(Status, 
"Closed", 'Success', 
"Cancelled", CASE(Reason__c, "Confirmed Request - Contact", 'Success', "Confirmed Request - Other", 'Success', 'Other'), 
"No Show", 'Success', 
"Didn't Get", 'Failure', 
'Other')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logbook Bucket</label>
    <type>Text</type>
</CustomField>