unpackaged/main/default/objects/Case/fields/Logbook_Flag__c.field-meta.xml
<CustomField>
    <fullName>Logbook_Flag__c</fullName>
    <formula>IMAGE( 
CASE(Logbook_Bucket__c, 
"Success", "/img/samples/flag_green.gif",
"Failure", "/img/samples/flag_red.gif", 
"/img/samples/flag_yellow.gif"), 
"Logbook Flag")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logbook Flag</label>
    <type>Text</type>
</CustomField>