unpackaged/main/default/objects/Case/fields/Logbook_State__c.field-meta.xml
<CustomField>
    <fullName>Logbook_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>State where the logbook occurred. E.g., Enter "FL" for flower deliveries in Florida. Pre-populated from the Vendor if there is a State on the Vendor or when Vendor is updated.</inlineHelpText>
    <label>Logbook State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>