unpackaged/main/default/objects/Case/fields/Male_Female_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Male_Female_Ratio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Male/Female Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>