unpackaged/main/default/objects/Case/fields/Meeting_Address_and_Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Address_and_Cross_Streets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Address and Cross Streets</label>
    <type>TextArea</type>
</CustomField>