unpackaged/main/default/objects/Case/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Location</label>
    <type>TextArea</type>
</CustomField>