unpackaged/main/default/objects/Case/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>