unpackaged/main/default/objects/Case/fields/Menu_Details__c.field-meta.xml
<CustomField>
    <fullName>Menu_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Menu Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>