unpackaged/main/default/objects/Case/fields/Menu_Pricing_Minimum_rich__c.field-meta.xml
<CustomField>
    <fullName>Menu_Pricing_Minimum_rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Menu Pricing/Minimum</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>